[gd_scene load_steps=9 format=3 uid="uid://dmdpqvtgjpfae"]

[ext_resource type="Script" path="res://src/fight/screen.gd" id="1_15obj"]
[ext_resource type="PackedScene" uid="uid://b8pepwnkg674s" path="res://src/fight/Card.tscn" id="1_e7pql"]
[ext_resource type="Script" path="res://src/fight/health.gd" id="3_g5crb"]
[ext_resource type="PackedScene" uid="uid://bxtfxhv5poscb" path="res://src/fight/HealthBar.tscn" id="5_ityqo"]
[ext_resource type="PackedScene" uid="uid://uw564dostwoo" path="res://src/ragdoll/amalgam_display/amalgam_display.tscn" id="5_vdmff"]

[sub_resource type="Theme" id="Theme_wupdr"]
default_font_size = 12

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bochu"]
size = Vector2(258, 451.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bomkx"]
size = Vector2(1462, 167)

[node name="Fight" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = SubResource("Theme_wupdr")
script = ExtResource("1_15obj")

[node name="Cards" type="ReferenceRect" parent="."]
custom_minimum_size = Vector2(160, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = 16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Player" type="VBoxContainer" parent="Cards"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Card" parent="Cards/Player" instance=ExtResource("1_e7pql")]
visible = false
layout_mode = 2

[node name="Card2" parent="Cards/Player" instance=ExtResource("1_e7pql")]
visible = false
layout_mode = 2

[node name="Card3" parent="Cards/Player" instance=ExtResource("1_e7pql")]
visible = false
layout_mode = 2

[node name="Card4" parent="Cards/Player" instance=ExtResource("1_e7pql")]
visible = false
layout_mode = 2

[node name="Card5" parent="Cards/Player" instance=ExtResource("1_e7pql")]
visible = false
layout_mode = 2

[node name="Card6" parent="Cards/Player" instance=ExtResource("1_e7pql")]
visible = false
layout_mode = 2

[node name="Card7" parent="Cards/Player" instance=ExtResource("1_e7pql")]
visible = false
layout_mode = 2

[node name="Card8" parent="Cards/Player" instance=ExtResource("1_e7pql")]
visible = false
layout_mode = 2

[node name="Card9" parent="Cards/Player" instance=ExtResource("1_e7pql")]
visible = false
layout_mode = 2

[node name="Card10" parent="Cards/Player" instance=ExtResource("1_e7pql")]
visible = false
layout_mode = 2

[node name="Enemy" type="VBoxContainer" parent="Cards"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Card" parent="Cards/Enemy" instance=ExtResource("1_e7pql")]
visible = false
layout_mode = 2

[node name="Card2" parent="Cards/Enemy" instance=ExtResource("1_e7pql")]
visible = false
layout_mode = 2

[node name="Card3" parent="Cards/Enemy" instance=ExtResource("1_e7pql")]
visible = false
layout_mode = 2

[node name="Card4" parent="Cards/Enemy" instance=ExtResource("1_e7pql")]
visible = false
layout_mode = 2

[node name="Card5" parent="Cards/Enemy" instance=ExtResource("1_e7pql")]
visible = false
layout_mode = 2

[node name="Card6" parent="Cards/Enemy" instance=ExtResource("1_e7pql")]
visible = false
layout_mode = 2

[node name="Card7" parent="Cards/Enemy" instance=ExtResource("1_e7pql")]
visible = false
layout_mode = 2

[node name="Card8" parent="Cards/Enemy" instance=ExtResource("1_e7pql")]
visible = false
layout_mode = 2

[node name="Card9" parent="Cards/Enemy" instance=ExtResource("1_e7pql")]
visible = false
layout_mode = 2

[node name="Card10" parent="Cards/Enemy" instance=ExtResource("1_e7pql")]
visible = false
layout_mode = 2

[node name="PlayerHealth" type="Control" parent="." node_paths=PackedStringArray("_global", "_limbs_container")]
layout_mode = 1
anchor_right = 0.3
anchor_bottom = 0.7
offset_left = 8.0
offset_top = 16.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("3_g5crb")
_global = NodePath("HealthBar")
_limbs_container = NodePath("Limbs/VBoxContainer")

[node name="HealthBar" parent="PlayerHealth" instance=ExtResource("5_ityqo")]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.1
grow_vertical = 1

[node name="Limbs" type="ReferenceRect" parent="PlayerHealth"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.1
anchor_right = 0.4
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
border_color = Color(0, 0.629083, 0.476686, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerHealth/Limbs"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 7

[node name="HealthBar" parent="PlayerHealth/Limbs/VBoxContainer" instance=ExtResource("5_ityqo")]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="HealthBar2" parent="PlayerHealth/Limbs/VBoxContainer" instance=ExtResource("5_ityqo")]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="HealthBar3" parent="PlayerHealth/Limbs/VBoxContainer" instance=ExtResource("5_ityqo")]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="HealthBar4" parent="PlayerHealth/Limbs/VBoxContainer" instance=ExtResource("5_ityqo")]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="HealthBar5" parent="PlayerHealth/Limbs/VBoxContainer" instance=ExtResource("5_ityqo")]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="HealthBar6" parent="PlayerHealth/Limbs/VBoxContainer" instance=ExtResource("5_ityqo")]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="HealthBar7" parent="PlayerHealth/Limbs/VBoxContainer" instance=ExtResource("5_ityqo")]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="HealthBar8" parent="PlayerHealth/Limbs/VBoxContainer" instance=ExtResource("5_ityqo")]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="HealthBar9" parent="PlayerHealth/Limbs/VBoxContainer" instance=ExtResource("5_ityqo")]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="HealthBar10" parent="PlayerHealth/Limbs/VBoxContainer" instance=ExtResource("5_ityqo")]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="EnemyHealth" type="Control" parent="." node_paths=PackedStringArray("_global", "_limbs_container")]
layout_mode = 1
anchor_left = 0.7
anchor_right = 1.0
anchor_bottom = 0.7
offset_top = 16.0
offset_right = -8.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_g5crb")
_global = NodePath("HealthBar")
_limbs_container = NodePath("Limbs/VBoxContainer")

[node name="HealthBar" parent="EnemyHealth" instance=ExtResource("5_ityqo")]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.1
fill_mode = 1

[node name="Limbs" type="ReferenceRect" parent="EnemyHealth"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.6
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
border_color = Color(0, 0.629083, 0.476686, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="EnemyHealth/Limbs"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 7

[node name="HealthBar" parent="EnemyHealth/Limbs/VBoxContainer" instance=ExtResource("5_ityqo")]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
fill_mode = 1

[node name="HealthBar2" parent="EnemyHealth/Limbs/VBoxContainer" instance=ExtResource("5_ityqo")]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
fill_mode = 1

[node name="HealthBar3" parent="EnemyHealth/Limbs/VBoxContainer" instance=ExtResource("5_ityqo")]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
fill_mode = 1

[node name="HealthBar4" parent="EnemyHealth/Limbs/VBoxContainer" instance=ExtResource("5_ityqo")]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
fill_mode = 1

[node name="HealthBar5" parent="EnemyHealth/Limbs/VBoxContainer" instance=ExtResource("5_ityqo")]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
fill_mode = 1

[node name="HealthBar6" parent="EnemyHealth/Limbs/VBoxContainer" instance=ExtResource("5_ityqo")]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
fill_mode = 1

[node name="HealthBar7" parent="EnemyHealth/Limbs/VBoxContainer" instance=ExtResource("5_ityqo")]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
fill_mode = 1

[node name="HealthBar8" parent="EnemyHealth/Limbs/VBoxContainer" instance=ExtResource("5_ityqo")]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
fill_mode = 1

[node name="HealthBar9" parent="EnemyHealth/Limbs/VBoxContainer" instance=ExtResource("5_ityqo")]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
fill_mode = 1

[node name="HealthBar10" parent="EnemyHealth/Limbs/VBoxContainer" instance=ExtResource("5_ityqo")]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
fill_mode = 1

[node name="ExchangeCard" type="ReferenceRect" parent="."]
custom_minimum_size = Vector2(120, 120)
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = -16.0
grow_vertical = 0

[node name="Card" parent="ExchangeCard" instance=ExtResource("1_e7pql")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 130.0
offset_bottom = 120.0
grow_horizontal = 1
grow_vertical = 1

[node name="BodySlamCard" type="ReferenceRect" parent="."]
custom_minimum_size = Vector2(120, 120)
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 168.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = -16.0
grow_vertical = 0

[node name="Card" parent="BodySlamCard" instance=ExtResource("1_e7pql")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 130.0
offset_bottom = 120.0
grow_horizontal = 1
grow_vertical = 1

[node name="SkipTurn" type="Button" parent="."]
visible = false
custom_minimum_size = Vector2(240, 120)
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -256.0
offset_top = -136.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 36
text = "Skip Turn"

[node name="WorldBoundaries" type="StaticBody2D" parent="."]
position = Vector2(128, 108)

[node name="CollisionShape2D5" type="CollisionShape2D" parent="WorldBoundaries"]
position = Vector2(1131, 224)
shape = SubResource("RectangleShape2D_bochu")
debug_color = Color(0.610271, 0.361733, 1, 0.42)

[node name="CollisionShape2D4" type="CollisionShape2D" parent="WorldBoundaries"]
position = Vector2(-127, 224)
shape = SubResource("RectangleShape2D_bochu")
debug_color = Color(0.610271, 0.361733, 1, 0.42)

[node name="CollisionShape2D3" type="CollisionShape2D" parent="WorldBoundaries"]
position = Vector2(511, 225)
shape = SubResource("RectangleShape2D_bochu")
debug_color = Color(0.610271, 0.361733, 1, 0.42)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="WorldBoundaries"]
position = Vector2(462, -83)
shape = SubResource("RectangleShape2D_bomkx")
debug_color = Color(0.610271, 0.361733, 1, 0.42)

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldBoundaries"]
position = Vector2(496, 537.5)
shape = SubResource("RectangleShape2D_bomkx")
debug_color = Color(0.610271, 0.361733, 1, 0.42)

[node name="PlayerRagdollArea" type="ReferenceRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.15
anchor_right = 0.4
anchor_bottom = 0.78
mouse_filter = 2
editor_only = false

[node name="Origin" type="Control" parent="PlayerRagdollArea"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -0.599976
offset_right = -2.0
offset_bottom = -0.599976
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1

[node name="PlayerAmalgam" parent="PlayerRagdollArea/Origin" instance=ExtResource("5_vdmff")]
unique_name_in_owner = true

[node name="EnemyRagdollArea" type="ReferenceRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.6
anchor_top = 0.15
anchor_right = 0.9
anchor_bottom = 0.78
border_color = Color(0, 0.56871, 0.847554, 1)
editor_only = false

[node name="Origin" type="Control" parent="EnemyRagdollArea"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = 6.10352e-05
offset_bottom = 6.10352e-05
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2

[node name="EnemyAmalgam" parent="EnemyRagdollArea/Origin" instance=ExtResource("5_vdmff")]
unique_name_in_owner = true

[connection signal="selected" from="ExchangeCard/Card" to="." method="_on_player_card_selected"]
[connection signal="selected" from="BodySlamCard/Card" to="." method="_on_player_card_selected"]
[connection signal="pressed" from="SkipTurn" to="." method="_on_skip_turn_pressed"]
[connection signal="blob_hovered" from="PlayerRagdollArea/Origin/PlayerAmalgam" to="." method="_on_player_amalgam_blob_hovered"]
[connection signal="blob_pressed" from="PlayerRagdollArea/Origin/PlayerAmalgam" to="." method="_on_player_amalgam_blob_pressed"]
[connection signal="limb_pressed" from="PlayerRagdollArea/Origin/PlayerAmalgam" to="." method="_on_player_amalgam_limb_pressed"]
